# clawutil

./: .travis.yml  README.md
dev/: test.py
dev/advection_3d_swirl/: regression_tests.py
examples/clawmultip_advection_1d_example1/: README.txt  run_cases_clawpack.py  setplot_case.py  setrun_case.py
src/: Makefile.common  Makefile.common.GPU  checkSources.py  check_src.py  make_clawtop.sh
src/python/clawutil/: README_clawmultip.txt  b4run.py  chardiff.py  claw_git_status.py  clawcode2html.py  clawdata.py  clawmultip_tools.py  compare_regression_tests.py  convert_readme.py  convert_rst2html.py  data.py  f90_build_dep.py  fetch_regression_data.py  git.py  imagediff.py  make_all.py  meson.build  multip_tools.py  nbtools.py  oldclawdata.py  regression_tests.py  run_examples.py  runclaw.py  save_regression_data.py  setenv.py  test.py  tests.py  util.py  whichclaw.py
src/python/clawutil/conversion/: Makefile_amrclaw_2d  Makefile_classic_1d  Makefile_classic_2d  Makefile_classic_3d  Makefile_geoclaw_2d_shallow  convert.py  convert43to46.py  convert46to50.py  convert_setrun_amrclaw_2d.py  permute.py  setrun_template_amrclaw_2d.py  setrun_template_classic_1d.py  setrun_template_classic_2d.py  setrun_template_classic_3d.py  setrun_template_geoclaw_2d_shallow.py
src/python/clawutil/conversion/pyclaw/: __init__.py  data.py
tests/: Pandas_Demo.ipynb  gaugetools_pandas.py  test_pandas.py
tests/data/: fort.gauge
