package = 'clawpack.clawutil'
pkg_dir = join_paths(package.split('.'))

python_sources = [
  '__init__.py',
  'b4run.py',
  'chardiff.py',
  'clawcode2html.py',
  'claw_git_status.py',
  'convert_readme.py',
  'data.py',
  'git.py',
  'imagediff.py',
  'make_all.py',
  'nbtools.py',
  'regression_tests.py',
  'runclaw.py',
  'setenv.py',
  'test.py',
  'whichclaw.py',
]

py.install_sources(
  python_sources,
  subdir: pkg_dir,
)
